# vasp-raman

./: README.md  parallel_raman.py  plot_raman.py  pyproject.toml  vasp_raman.py
test/: test_vasp_raman.py
